1.0.0.83-alpha
-Fixed bug in Pixelate Window that caused a white square to flash before starting
-Updated UI Styling for Command Builder
-Updated Button Styling
-Fixed banned user message from playing twice

1.0.0.82-alpha
-Hotfix for bit multiplier stacking issue

1.0.0.81-alpha
-Fixed In Raid Check from running multiple instances
-Fixed Settings saving and loading. All changed settings should carry over from version to version 
-Fixed blerp checkbox from not staying toggled
-Changed blerp integration system to use regex magic to find the user. This should fix it not working
-Added Test Command button to the Command Builder Menu
-Added rate limit controls. This Adds a delay between processing messages, which can help command accuracy if users are spamming commands

1.0.0.80-alpha
-Fixed !sweatbot from showing incorrect state
-Added condition for !sweatbot and !sbgamble that if subs only is checked in the control menu, only subs can use the command
-Added Sub only mode for bot commands
-Adjusted Pixelate overlay to prevent a 'after image' after being ran more than once
-Added custom names for the bots currency
-Resize custom name
-Changed file watcher so it only runs while the refund tab is open
-Menu adjustments 
-Removed redundant property saves
-Added Game profile switching in the Command Builder menu
-Corrected !sbadd and !sbremove to write into the current profile
-Fixed bug where if console tab is clicked while on that tab causing a crash
-Added integrity check on start up that verifies necessary files and folders are in the directory
-Removed trader services from start. Now only runs if Tarkov Traders are enabled
-Increased readability of Refund Menu
-Added rudimentary In raid check for tarkov(buggy) that will pause and unpause commands in and out of raid

1.0.0.79-alpha
-Fixed refund menu taking awhile to refresh after ever refund
-Potentially fixed issue when multiple users send a message at once, causing the refund menu to crash the program