@@ -145,8 +145,8 @@
             <setting name="isDebugCommands" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="IsDarkMode" serializeAs="String">
-                <value>False</value>
+            <setting name="isEasterEgg" serializeAs="String">
+                <value>True</value>
             </setting>
         </UiBot.Properties.Settings>
     </userSettings>
